Fix broken [Post a reply] link position on mobile

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1183,12 +1183,8 @@ div.boardlist a {
 }
 #thread-quick-reply {
 	display: none;
-	position: absolute;
-	left: 50%;
-	right: 50%;
-	text-align: center;
-	width: 100px;
-	margin-left: -50px;
+	float: right;
+	margin-right: 10px;
 }
 #thread_stats {
 	float: right;
